# MoonRegistration

./: .dockerignore  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile_dev  Dockerfile_python  Dockerfile_release  Dockerfile_wasm  LICENSE  PackReleaseZip.py  README.md  RELEASE_BODY.md  Release.py  release_config.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: pack-release-package.yml
cmake/: Config.cmake.in
demo/: .gitignore  CMakeLists.txt  MoonDetector_advance.cpp  MoonDetector_advance.py  MoonDetector_basic.cpp  MoonDetector_basic.py  MoonDetector_c_api.c  README.md
demo/cpp_c/: MoonDetect_advance.cpp  MoonDetect_basic.cpp  MoonDetect_c_api.c  MoonDetector_advance.cpp  MoonDetector_basic.cpp  MoonDetector_c_api.c  MoonRegistrar_advance.cpp  MoonRegistrar_basic.cpp  MoonRegistrar_c_api.c  MoonRegistrar_live_registration.cpp  MoonRegistrate_advance.cpp  MoonRegistrate_basic.cpp  MoonRegistrate_live_registration.cpp
demo/js/: .gitignore  MoonDetect_basic.html  MoonRegistrate_basic.html
demo/output/: .gitignore
demo/python/: MoonDetect_advance.py  MoonDetect_basic.py  MoonDetector_advance.py  MoonDetector_basic.py  MoonRegistrate_advance.py  MoonRegistrate_basic.py  MoonRegistrate_live_registration.py
dockerfiles/: cpp_demo.dockerfile  js_wasm_demo.dockerfile  python_demo.dockerfile  release_env.dockerfile
include/MoonRegistration/: MoonDetect.hpp  MoonRegistrar.hpp  MoonRegistrate.hpp  c_mrapi.h  imgprocess.hpp  macros.h  mrapi.hpp  mrconfig.h.in  preprocessing.hpp  shapes.hpp  util.hpp  utils.hpp  version.hpp
include/MoonRegistration/MoonDetect/: default_steps.hpp  detector.hpp  selector.hpp
include/MoonRegistration/MoonRegistrar/: registrar.hpp
include/MoonRegistration/MoonRegistrate/: default_steps.hpp  filter.hpp  registrar.hpp
include/MoonRegistration/c_mrapi/: MoonDetect_c_api.h  MoonRegistrar_c_api.h  MoonRegistrate_c_api.h  internal_c_api.hpp  utils_c_api.h
src/: c_mrapi.cpp  imgprocess.cpp  preprocessing.cpp  shapes.cpp  util.cpp  utils.cpp
src/MoonDetect/: default_steps.cpp  detector.cpp  selector.cpp
src/MoonRegistrar/: registrar.cpp
src/MoonRegistrate/: default_steps.cpp  filter.cpp  registrar.cpp
src/c_mrapi/: MoonDetect_c_api.cpp  MoonRegistrar_c_api.cpp  MoonRegistrate_c_api.cpp  c_mrapi.cpp  utils_c_api.cpp
